# whatsapp-rust

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  clippy.toml  deny.toml  rust-toolchain.toml
apps/desktop/: Cargo.toml  README.md
apps/desktop/src/: assets.rs  main.rs  responsive.rs  theme.rs  utils.rs
apps/desktop/src/app/: calls.rs  chats.rs  messages.rs  mod.rs
apps/desktop/src/audio/: call_device.rs  encoder.rs  mod.rs  player.rs  recorder.rs  waveform.rs
apps/desktop/src/client/: mod.rs  whatsapp.rs
apps/desktop/src/components/: avatar.rs  call_popup.rs  chat_header.rs  chat_item.rs  chat_list.rs  input_area_view.rs  message_bubble.rs  message_list.rs  mod.rs  outgoing_call_popup.rs
apps/desktop/src/state/: app_state.rs  call.rs  chat.rs  events.rs  mod.rs
apps/desktop/src/video/: audio.rs  mod.rs  player.rs  streaming.rs
apps/desktop/src/views/: chat.rs  error.rs  loading.rs  mod.rs  pairing.rs
examples/voip-cli/: Cargo.toml
examples/voip-cli/src/: main.rs  video.rs
http_clients/ureq-client/: Cargo.toml
http_clients/ureq-client/src/: lib.rs
plugins/metrics/: Cargo.toml
plugins/metrics/src/: lib.rs
storages/chat-store/: Cargo.toml
storages/chat-store/migrations/2026-07-09-000000_chat_store_initial/: down.sql  up.sql
storages/chat-store/migrations/2026-07-24-000000_bare_identity_keys/: down.sql  up.sql
storages/chat-store/src/: error.rs  fts.rs  lib.rs  lid.rs  materialize.rs  queries.rs  schema.rs  store.rs  types.rs
storages/chat-store/tests/: chat_store_test.rs
storages/sqlite-storage/: Cargo.toml  build.rs
storages/sqlite-storage/migrations/2026-05-31-000000_msg_secret_expires_at/: down.sql  up.sql
storages/sqlite-storage/migrations/2026-06-19-000000_clear_bincode_blobs/: down.sql  up.sql
storages/sqlite-storage/migrations/2026-06-26-000000_add_pending_inbound_messages/: up.sql
storages/sqlite-storage/migrations/2026-07-02-000000_add_lid_migrated/: down.sql  up.sql
storages/sqlite-storage/migrations/2026-07-03-000000_add_signed_prekey_rotation/: down.sql  up.sql
storages/sqlite-storage/migrations/2026-07-03-000001_add_read_receipts_privacy/: down.sql  up.sql
storages/sqlite-storage/proto/: wire.desc  wire.desc.sha256  wire.proto
storages/sqlite-storage/src/: lib.rs  schema.rs  shared.rs  sqlite_store.rs  wire.rs
tests/bench-integration/: Cargo.toml
tests/bench-integration/benches/: integration.rs
tests/bench-integration/src/: main.rs
transports/sockudo-transport/: Cargo.toml
transports/sockudo-transport/src/: lib.rs
transports/tokio-transport/: Cargo.toml
transports/tokio-transport/src/: lib.rs
wacore/: Cargo.toml  build.rs
wacore/appstate/: Cargo.toml
wacore/appstate/benches/: appstate_benchmark.rs
wacore/appstate/src/: decode.rs  encode.rs  errors.rs  hash.rs  lib.rs  lthash.rs  patch_decode.rs  processor.rs  schemas.rs
wacore/benches/: appstate_sync_benchmark.rs  history_sync_benchmark.rs  message_utils_benchmark.rs  reporting_token_benchmark.rs  send_receive_benchmark.rs  sframe_varint_benchmark.rs  token_lookup_benchmark.rs  voip_benchmark.rs
wacore/binary/: Cargo.toml  build.rs
wacore/binary/benches/: binary_benchmark.rs  jid_benchmark.rs  numeric_attr_benchmark.rs
wacore/binary/fuzz/: Cargo.toml
wacore/binary/fuzz/fuzz_targets/: parse_jid.rs  unmarshal_ref.rs
wacore/binary/src/: attrs.rs  decoder.rs  encoder.rs  error.rs  jid.rs  marshal.rs  node.rs  token.rs  zlib_pool.rs
wacore/binary/tests/: attrs_inline_alloc.rs  marshal_exact_hint_alloc.rs  roundtrip_proptest.rs
wacore/derive/: Cargo.toml
wacore/derive/src/: lib.rs
wacore/examples/: voip_profile.rs
wacore/libsignal/: Cargo.toml
wacore/libsignal/benches/: libsignal_benchmark.rs
wacore/libsignal/src/core/: address.rs  curve.rs  mod.rs
wacore/libsignal/src/crypto/: aes_cbc.rs  aes_gcm.rs  hash.rs  mod.rs  provider.rs
wacore/libsignal/src/protocol/: consts.rs  error.rs  group_cipher.rs  identity_key.rs  legacy_session.rs  local_field.rs  mod.rs  (+7 more)
wacore/libsignal/tests/: counter_lease.rs  session_divergence.rs
wacore/noise/: Cargo.toml
wacore/noise/benches/: noise_benchmark.rs
wacore/noise/src/: framing.rs  handshake.rs  state.rs  test_util.rs
wacore/noise/tests/: cert_chain_verify.rs
wacore/src/: adv.rs  appstate_sync.rs  bot_message.rs  client.rs  client_profile.rs  comment.rs  companion_reg.rs  crypto.rs  download.rs  event.rs  history_sync.rs  lib.rs  media_retry.rs  message_edit.rs  message_processing.rs  messages.rs  msg_secret.rs  net.rs  pair.rs  pair_code.rs  poll.rs  prekeys.rs  proto_helpers.rs  reaction.rs  reporting_token.rs  request.rs  runtime.rs  secret_enc_addon.rs  send.rs  serde_helpers.rs  shortcake.rs  stats.rs  sticker_pack.rs  sync_marker.rs  telemetry.rs  time.rs  upload.rs  usync.rs
wacore/src/client/: context.rs
wacore/src/iq/: abprops.rs  business.rs  chatstate.rs  contacts.rs  dirty.rs  generated.rs  groups.rs  mex_operations.rs  mod.rs  prekeys.rs  privacy.rs  props.rs  tctoken.rs  usync.rs
wacore/src/protocol/: keepalive.rs  nack.rs  retry.rs
wacore/src/send/: classify.rs  dm.rs  encrypt.rs  group.rs  peer.rs  resolved_devices.rs  status.rs  tests.rs
wacore/src/stanza/: business.rs  call.rs  groups.rs  receipt.rs
wacore/src/store/: ab_props.rs  cache.rs  commands.rs  device.rs  error.rs  in_memory.rs  signal_cache.rs  signal_cache_durability_chaos.rs  traits.rs
wacore/src/types/: call.rs  events.rs  jid.rs  lid_pn.rs  message.rs  presence.rs
wacore/src/voip/: audio.rs  demux.rs  driver.rs  e2e_srtp.rs  engine.rs  h264.rs  hbh_srtp.rs  mod.rs  registry.rs  relay_parse.rs  rtcp.rs  rtp.rs  session.rs  sframe.rs  ssrc.rs  stun.rs  tap.rs  transport.rs  warp.rs
wacore/tests/: appstate_external_mutations_test.rs  appstate_mac_test.rs  iq_build_equivalence.rs  noise_handshake_test.rs  wire_enum_serde_test.rs
waproto/: .gitignore  Cargo.toml  build.rs
waproto/src/: lib.rs  tags.rs  whatsapp.desc  whatsapp.desc.sha256  whatsapp.proto  whatsapp.rs
waproto/tests/: serde_enum_repr.rs  serde_enum_snake_case.rs  serde_open_enum.rs
(+277 files in other folders)
