[package]
name = "waproto"
version = "0.6.0"
edition = "2024"
authors = ["João Lucas <jlucaso@hotmail.com>"]
license = "MIT"
repository = "https://github.com/jlucaso1/whatsapp-rust"
description = "Protocol Buffers definitions for WhatsApp"

[features]
default = []
generate = ["dep:prost-build", "dep:prost-types", "dep:prost", "dep:heck"]
serde-deserialize = []
serde-snake-case = ["serde-deserialize"]

[dependencies]
prost = { workspace = true, features = ["derive"] }
serde = { workspace = true }

[build-dependencies]
prost-build = { workspace = true, optional = true }
prost-types = { workspace = true, optional = true }
prost = { workspace = true, features = ["derive"], optional = true }
heck = { workspace = true, optional = true }

[lints]
workspace = true
