[package]
name = "whatsapp-rust-ureq-http-client"
version = "0.6.0"
edition = "2024"
authors = ["João Lucas <jlucaso@hotmail.com>"]
license = "MIT"
repository = "https://github.com/jlucaso1/whatsapp-rust"
description = "Ureq-based HTTP client implementation for whatsapp-rust"

[features]
default = []
# Skip TLS certificate verification (for testing with mock servers)
danger-skip-tls-verify = []

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
# `rustls-no-provider` gives rustls without a built-in crypto backend (the plain
# `rustls` feature would pull `ring`); the RustCrypto provider is injected in
# `build_agent`. `rustls-webpki-roots` keeps the bundled Mozilla root store.
ureq = { version = "3.3.0", default-features = false, features = [
  "rustls-no-provider",
  "rustls-webpki-roots",
] }
rustls-rustcrypto = { workspace = true }
wacore = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
