[package]
name = "whatsapp-rust-sqlite-storage"
version = "0.6.0"
edition = "2024"
rust-version.workspace = true
authors = ["João Lucas <jlucaso@hotmail.com>"]
license = "MIT"
repository = "https://github.com/jlucaso1/whatsapp-rust"
description = "SQLite storage backend for whatsapp-rust"

# `libsqlite3-sys` is pulled only to activate its `bundled` feature (compile
# SQLite in-tree); there is no direct `use`, so static analysers flag it.
[package.metadata.cargo-machete]
ignored = ["libsqlite3-sys"]

[features]
default = ["bundled-sqlite"]
bundled-sqlite = ["libsqlite3-sys/bundled"]

[dependencies]
async-trait = { workspace = true }
buffa = { workspace = true }
bytes = { workspace = true }
diesel = { workspace = true }
diesel_migrations = { workspace = true }
libsqlite3-sys = { version = "0.37", default-features = false, optional = true }
log = { workspace = true }
# Shared across all r2d2 pools so each per-session store doesn't spawn its own pool of
# management threads. Already in the tree transitively via r2d2 0.8.
scheduled-thread-pool = "0.2"
serde_json = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["sync", "rt", "time", "macros"] }
wacore = { workspace = true }

[build-dependencies]
buffa-build = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
portable-atomic = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "time", "macros"] }

[lints]
workspace = true
