[package]
name = "whatsapp-rust-tokio-transport"
version = "0.6.0"
edition = "2024"
authors = ["João Lucas <jlucaso@hotmail.com>"]
license = "MIT"
repository = "https://github.com/jlucaso1/whatsapp-rust"
description = "Tokio-based WebSocket transport for whatsapp-rust"

[features]
default = []
# Skip TLS certificate verification (for testing with mock servers)
danger-skip-tls-verify = []

[dependencies]
anyhow = { workspace = true }
async-channel = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
futures-util = { version = "0.3.32", default-features = false, features = ["sink", "alloc", "std"] }
http = "1.4.2"
log = { workspace = true }
# No `ring`: the RustCrypto provider (installed at runtime) supplies all TLS
# crypto, so rustls/tokio-rustls carry no built-in provider and tokio-websockets
# needs none (we pass our own connector via `rustls-bring-your-own-connector`).
# No `tls12` either: the provider (rustls-rustcrypto without its `tls12`
# feature) carries only TLS 1.3 suites, so the client is 1.3-only regardless —
# WhatsApp's WSS and media endpoints negotiate 1.3.
rustls = { version = "0.23", default-features = false, features = ["std", "logging"] }
rustls-rustcrypto = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "sync"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["logging"] }
tokio-websockets = { version = "0.13.3", features = [
  "client",
  "rustls-bring-your-own-connector",
  "rand",
  # Pure-Rust SHA-1 for the WebSocket handshake accept-key (replaces `ring`,
  # which we dropped; this is unrelated to the TLS crypto provider).
  "sha1_smol",
] }
wacore = { workspace = true }
webpki-roots = "1.0.8"

[lints]
workspace = true
